Add access section with form for desktop.

--- a/index.html
+++ b/index.html
@@ -76,5 +76,18 @@
       </div>
     </div>
   </section>
+  <section class="access">
+    <div class="grid">
+      <div class="access__content">
+        <h3 class="heading heading--3">Get early access today</h3>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous.
+          If you have any questions, our support team would be happy to help you.</p>
+      </div>
+      <form class="access__form">
+        <input class="access__form-email" type="email" placeholder="Enter your email...">
+        <input class="access__form-btn" type="submit" value="Get Started For Free">
+      </form>
+  </section>
+  </div>
 </body>
 </html>
