Finished footer section for desktop.

--- a/index.html
+++ b/index.html
@@ -89,5 +89,60 @@
       </form>
   </section>
   </div>
+  <footer class="footer">
+    <div class="grid">
+      <div class="footer__logo">
+        <img src="images/logo.svg" alt="logo">
+      </div>
+      <div class="footer__contact">
+        <div class="footer__contact-phone">
+          <img src="images/icon-phone.svg" alt="phone">
+          <span>Phone: +1-543-1234-567</span>
+        </div>
+        <div class="footer__contact-email">
+          <img src="images/icon-email.svg" alt="email">
+          <span>example@fylo.com</span>
+        </div>
+      </div>
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li>
+            <a href="#">About Us</a>
+          </li>
+          <li>
+            <a href="#">Job</a>
+          </li>
+          <li>
+            <a href="#">Press</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <li>
+            <a href="#">Contact Us</a>
+          </li>
+          <li>
+            <a href="#">Terms</a>
+          </li>
+          <li>
+            <a href="#">Privacy</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__social-media">
+        <a href="" class="footer__social-media-link">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="footer__social-media-link">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="" class="footer__social-media-link">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
