--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Fylo | Landing Page</title>
 </head>
 <body class="container">
   <nav class="nav">
@@ -65,7 +65,7 @@
           <div class="testimonial-card__user">
             <img src="images/avatar-testimonial.jpg" alt="user">
             <div class="testimonial-card__user-info">
-              <h3 class="heading--3">Kyle Burton</h3>
+              <h4 class="heading--3">Kyle Burton</h4>
               <p class="text-small">Founder & CEO, Huddle</p>
             </div>
           </div>
