Finished styling for tablets.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="grid">
       <div class="productive__content">
         <h2 class="heading heading--2">Stay productive, wherever you are</h2>
-        <p>Never let location be an issue when accessing your files. Fylo has you
+        <p class="productive__content-text">Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.</p>
         <br>
-        <p>Securely share files and folders with friends, family and colleagues for
+        <p class="productive__content-text">Securely share files and folders with friends, family and colleagues for
           live collaboration. No email attachments required!</p>
         <a href="#" class="text-center cta">
           <span>See how Fylo works</span>
