--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </div>
       <nav class="footer__nav">
-        <ul class="footer__list">
+        <ul class="footer__nav-list--1">
           <li>
             <a href="#">About Us</a>
           </li>
@@ -119,7 +119,7 @@
             <a href="#">Blog</a>
           </li>
         </ul>
-        <ul class="footer__list">
+        <ul class="footer__nav-list--2">
           <li>
             <a href="#">Contact Us</a>
           </li>
